# PDD_MD5

./: .env.example  README.md  main.py  pyproject.toml
data/: clientes.csv  regiones.csv  ventas_limpias.csv
docs/: eda.md  integracion_datos.md  modelo_estrella.md
power bi/: visusuales_powerbi.pbix
scrips/: etl_pipeline.py  etl_productos.py  etl_regiones.py
scripts/: __init__.py  eda_clientes.py  eda_regiones.py  eda_ventas.py  etl_clientes.py  etl_pipeline.py  etl_to_db.py  etl_ventas.py
sql/: create_star_schema.sql
